--- a/logx/.vscode/launch.json
+++ b/logx/.vscode/launch.json
@@ -3,18 +3,18 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
-        "name": "New logx",
-        "type": "node",
-        "request": "launch",
-        "program": "${workspaceFolder}/.electron-vue/dev-runner.js",
-        "stopOnEntry": false,
-        "args": [],
-        "cwd": "${workspaceRoot}",
-        "preLaunchTask": null,
-        "env": {},
-        "console": "internalConsole",
-        "sourceMaps": false,
-        "outDir": null
-    }]
+    "configurations": [
+        {
+            "name": "Debug Main Process",
+            "type": "node",
+            "request": "launch",
+            "cwd": "${workspaceRoot}/src/main.js",
+            "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
+            "windows": {
+              "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
+            },
+            "args" : ["."],
+            "outputCapture": "std"
+          }
+    ]
 }
