--- a/logx/package.json
+++ b/logx/package.json
@@ -6,16 +6,18 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
+    "electron_build": "vue-cli-service electron:build",
+    "electron_serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
   "main": "background.js",
   "dependencies": {
-    "jquery": "^3.3.1",
-    "material-design-icons-iconfont": "^3.0.3",
     "core-js": "^2.6.5",
+    "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
+    "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.6.10",
     "vuetify": "^1.5.5"
   },
